infrastructure/routing/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: routing
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      hostname: "*.home.lab"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
