infrastructure/routing/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: routing
  hostnames:
    - grafana.home.lab
    - grafana.rubenspensky.com
  rules:
    - backendRefs:
        - name: prometheus-stack-grafana
          port: 80
